JumpScript/tests/baselines/reference/errorMessageOnObjectLiteralType.errors.txt
tests/cases/compiler/errorMessageOnObjectLiteralType.jump(5,3): error TS2339: Property 'getOwnPropertyNamess' does not exist on type '{ a: string; b: number; }'.
tests/cases/compiler/errorMessageOnObjectLiteralType.jump(6,8): error TS2551: Property 'getOwnPropertyNamess' does not exist on type 'ObjectConstructor'. Did you mean 'getOwnPropertyNames'?


==== tests/cases/compiler/errorMessageOnObjectLiteralType.jump (2 errors) ====
    var x: {
        a: string;
        b: number;
    };
    x.getOwnPropertyNamess();
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'getOwnPropertyNamess' does not exist on type '{ a: string; b: number; }'.
    Object.getOwnPropertyNamess(null);
           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2551: Property 'getOwnPropertyNamess' does not exist on type 'ObjectConstructor'. Did you mean 'getOwnPropertyNames'?